lb-coredns.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9153"
    prometheus.io/scrape: "true"
    metallb.universe.tf/allow-shared-ip: "true"
  labels:
    app.kubernetes.io/instance: fed-coredns
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: coredns
  name: fed-coredns-udp
  namespace: default
spec:
  type: LoadBalancer
  externalIPs:
  - 131.130.37.3
  ports:
  - name: udp-53
    port: 53
    protocol: UDP
    targetPort: 53
  selector:
    app.kubernetes.io/instance: fed-coredns
    app.kubernetes.io/name: coredns
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9153"
    prometheus.io/scrape: "true"
    metallb.universe.tf/allow-shared-ip: "true"
  labels:
    app.kubernetes.io/instance: fed-coredns
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: coredns
  name: fed-coredns-tcp
  namespace: default
spec:
  type: LoadBalancer
  externalIPs:
  - 131.130.37.3
  ports:
  - name: tcp-53
    port: 53
    protocol: TCP
    targetPort: 53
  selector:
    app.kubernetes.io/instance: fed-coredns
    app.kubernetes.io/name: coredns
  sessionAffinity: None
