mongo_small.yaml
# add new mount host directory (clashes with non-federated mongo)
# expose sts (headless service) with load balancer
# add namespacing to sevices and sts
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: vinnsl
  labels:
    name: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    role: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-0
  namespace: vinnsl
spec:
  type: LoadBalancer
  #externalTrafficPolicy: Local
  selector:
    statefulset.kubernetes.io/pod-name: mongo-0
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mongo
  namespace: vinnsl
spec:
  serviceName: "mongo"
  replicas: 1
  template:
    metadata:
      labels:
        role: mongo
        environment: test
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo
          command:
            - mongod
            - "--bind_ip"
            - 0.0.0.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/fed-db
        - name: mongo-sidecar
          image: cvallance/mongo-k8s-sidecar
      nodeSelector:
        kubernetes.io/hostname: nn03
      volumes:
        - name: mongo-persistent-storage
          hostPath:
            path: /tmp/fed-mongo
            type: Directory
