vinnsl-nn-ui.yaml
cat <<EOF | kubectl create -f -
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9779"
  labels:
    testProject: vinnsl-ui
    app: vinnsl-nn-ui-deploy
  name: vinnsl-ui
  namespace: vinnsl
spec:
  ports:
  - name: radan-http
    port: 8088
    protocol: TCP
    targetPort: 8088
  selector:
    app: vinnsl-nn-ui-deploy
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    testProject: vinnsl-ui
    app: vinnsl-nn-ui-deploy
  name: vinnsl-nn-ui-deploy
  namespace: vinnsl
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: vinnsl-nn-ui-deploy
  template:
    metadata:
      labels:
        testProject: vinnsl-ui
        app: vinnsl-nn-ui-deploy
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: a0144/fed-vinnsl-nn-ui:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 500m # 0.5 -> more would be good
          requests:
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /health
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8088
          name: radan-http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
EOF
