vinnsl-nn-worker.yaml
cat <<EOF | kubectl create -f -
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9779"
  labels:
    testProject: vinnsl-nn-worker
    app: vinnsl-nn-worker
  name: vinnsl-nn-worker
  namespace: vinnsl
spec:
  ports:
  - port: 8084
    name: nn-worker-rest
    protocol: TCP
    targetPort: 8084
  - port: 9000
    name: nn-worker-ui
    protocol: TCP
    targetPort: 9000
  selector:
    app: vinnsl-nn-worker
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    testProject: vinnsl-nn-worker
    app: vinnsl-nn-worker
  name: vinnsl-nn-worker
  namespace: vinnsl
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: vinnsl-nn-worker
  template:
    metadata:
      labels:
        testProject: vinnsl-nn-worker
        app: vinnsl-nn-worker
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: a0144/fed-vinnsl-nn-worker:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "2" # 1000m
          requests:
            cpu: "1.5"
        name: spring-boot
        ports:
        - containerPort: 8084
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
EOF
