vinnsl-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9779"
  labels:
    testProject: vinnsl-service
    app: vinnsl-service
  name: vinnsl-service
  namespace: vinnsl
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: vinnsl-service
  type: LoadBalancer
---
cat <<EOF | kubectl create -f -
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    testProject: vinnsl-service
    app: vinnsl-service
  name: vinnsl-service
  namespace: vinnsl
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: vinnsl-service
  template:
    metadata:
      labels:
        testProject: vinnsl-service
        app: vinnsl-service
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: a0144/fed-vinnsl-service:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "700m"
          requests:
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
